# recommendation-system

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  MODEL_CARD.md  Makefile  README.md  docker-compose.yml  dvc.yaml  mlflow.db  pyproject.toml  validate_env.py
apresentacao/: apresentacao_STAR.pptx  roteiro_video_STAR.md
artifacts/encoders/: movie_encoder.pkl  user_encoder.pkl
artifacts/model/: best_model.pth  config.json
data/features/: features.csv
data/processed/: processed.py  ratings_processed.csv
data/splits/: test.csv  train.csv  val.csv
mlartifacts/736959386624341058/0ca7c9e0093d42b88dc6eb3755cf0340/artifacts/model/: MLmodel
mlartifacts/957873649193011100/4837bbe208584363a5efe95881ca8327/artifacts/model/: MLmodel
mlartifacts/957873649193011100/4ac0f343c603420b9606aa3c374810c4/artifacts/model/: MLmodel  requirements.txt
mlartifacts/957873649193011100/4ac0f343c603420b9606aa3c374810c4/artifacts/model/data/: model.pth
mlartifacts/957873649193011100/563aa1f11d3244559f1878769da5b58b/artifacts/model/: MLmodel
mlartifacts/957873649193011100/563aa1f11d3244559f1878769da5b58b/artifacts/model/data/: model.pth
mlartifacts/957873649193011100/a404f83430c24ea08d50687f61742d43/artifacts/model/: MLmodel  conda.yaml  python_env.yaml
notebooks/: test.ipynb
scripts/: validation_env.py
src/api/: dependencies.py  exception_handlers.py  main.py  routes.py  schemas.py
src/config/: settings.py
src/data/: dataset.py  load_data.py  preprocess.py  split_data.py
src/evaluation/: evaluate.py  metrics.py
src/features/: build_features.py  negative_sampling.py
src/inference/: cache.py  encoder_loader.py  model_loader.py  movie_repository.py  predictor.py
src/models/: base_model.py  baseline_model.py  mlp_model.py  model_factory.py
src/services/: recommendation_service.py
src/training/: early_stopping.py  train.py  trainer.py
src/utils/: logger.py  seed.py
tests/: conftest.py
tests/api/: test_endpoints.py  test_schemas.py
tests/data/: test_data_pipeline.py
tests/functional/: test_dataset.py  test_early_stopping.py  test_metrics.py  test_models.py  test_negative_sampling.py  test_preprocess.py  test_seed_and_cache.py
tests/integration/: test_recommendation_flow.py
tests/performance/: test_latency.py
tests/resilience/: test_resilience.py
tests/security/: test_vulnerabilities.py
tests/smoke/: test_smoke.py
