[project]
name = "recommendation-system"
version = "0.1.0"
description = "Movie recommendation system using PyTorch, MLflow, DVC and FastAPI"
readme = "README.md"
requires-python = ">=3.11,<3.13"

dependencies = [
    "fastapi>=0.115,<1.0",
    "uvicorn>=0.35,<1.0",
    "pandas>=2.2,<3.0",
    "numpy>=2.0,<3.0",
    "scikit-learn>=1.6,<2.0",
    "torch>=2.7,<3.0",
    "mlflow>=2.14,<3.0",
    "dvc>=3.60,<4.0",
    "pydantic>=2.11,<3.0",
    "pydantic-settings>=2.10,<3.0",
    "python-dotenv>=1.1,<2.0",
    "protobuf>=4.25,<5.0",
    "kaggle>=1.7",
    "kagglehub>=0.3",
]

[dependency-groups]
dev = [
"pytest>=8.4",
"ruff>=0.12",
"black>=25.0",
"pre-commit>=4.2"
]

[tool.ruff]
line-length = 88

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
only-include = ["src"]
