[project]
name = "recommendation-system"
version = "0.1.0"
description = "Projeto de recomendação utilizando machine learning"
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
"pandas>=2.2.2",
"numpy>=2.1.0",
"scikit-learn>=1.5.1",
"torch>=2.4.0",
"mlflow>=2.16.0",
"dvc>=3.59.0",
"python-dotenv>=1.0.1",
"pydantic>=2.8.2",
"pydantic-settings>=2.4.0",
"pyyaml>=6.0.2",
"matplotlib>=3.9.2",
"seaborn>=0.13.2",
"tqdm>=4.66.5",
]

[dependency-groups]
dev = [
"pytest>=8.3.2",
"pytest-cov>=5.0.0",
"ruff>=0.6.4",
"pre-commit>=3.8.0",
"ipykernel>=6.29.5",
]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = [
"E",
"F",
"I",
"N",
"UP",
"B",
]

ignore = [
"B008","E501","F541"
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
markers = [
    "smoke: testes de smoke (fumaça) — validação mínima do build",
    "functional: testes unitários das regras de negócio",
    "api: testes de contrato dos endpoints REST e schemas",
    "integration: testes de integração end-to-end da inferência",
    "security: testes de segurança / vulnerabilidade",
    "resilience: testes de resiliência e tratamento de erros",
    "data: testes de qualidade / integridade dos dados",
    "performance: testes de performance (soft budgets)",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/recommendation_system"]

